--- a/sub2/sub2_pc.css
+++ b/sub2/sub2_pc.css
@@ -1,5 +1,130 @@
 @charset "utf-8";
 
+/***** header *****/
+body {
+  margin: 0;
+  padding: 0;
+}
+
+.head {
+  position: absolute;
+}
+
+.wrap img {
+  width: 15vw;
+  margin: 2vw;
+  margin-left: 5vw;
+}
+
+.head .wrap #icon + label,
+.head .wrap #wrap p,
+.big_menu .story_menu_down .arrow,
+#icon {
+  display: none;
+}
+
+.head #wrap {
+  position: absolute;
+  left: 50%;
+}
+
+#icon + label + #wrap {
+  position: absolute;
+  width: 5vw;
+  height: 3vw;
+  transition: none;
+  top: 0;
+  background-color: transparent;
+  border: none;
+}
+
+.head .wrap #wrap .login {
+  background: transparent;
+  font-size: 0.6vw;
+  text-align: center;
+  padding: 0.5vw;
+  width: 50px;
+  margin: 0;
+  color: #ffffff;
+  border: 2px solid #ddd;
+  border-radius: 30px 30px;
+  font-family: var(--font-Pretendard);
+  position: absolute;
+  left: 82vw;
+  top: 2vw;
+}
+
+.head .wrap #wrap .big_menu {
+  margin-top: 10px;
+  background: transparent;
+  padding: 0;
+  border: none;
+  height: 8vh;
+  display: flex;
+  width: 60vw;
+  position: absolute;
+  left: 25vw;
+  top: 0.5vw;
+}
+
+.head .wrap #wrap .big_menu li {
+  margin-bottom: 10px;
+  padding: 1.3vw;
+  height: 3vw;
+  width: 12vw;
+  border: none;
+}
+
+.head .wrap #wrap .big_menu li a {
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.4);
+  font-weight: 600;
+  font-size: 1vw;
+  font-family: var(--font-Pretendard);
+}
+
+.head .wrap #wrap .big_menu .story_menu_down .arrow {
+  width: 3%;
+  transform: translate(0, -50%) rotate(90deg);
+  position: relative;
+  left: 50vw;
+  bottom: 4vw;
+  opacity: 0; /* 모바일 버전에서 숨기도록 opacity 0 유지 */
+  transition: opacity 0.3s ease;
+}
+
+.head .wrap #wrap .big_menu .sub_menu {
+  opacity: 0; /* 모바일 버전에서 숨기도록 opacity 0 유지 */
+  transition: opacity 0.3s ease;
+  position: absolute;
+  left: 46vw;
+  top: 60px;
+  text-align: center;
+  background-color: #fff;
+  border: 2px solid #000;
+  border-radius: 20px 20px;
+  height: 9vw;
+}
+
+.head .wrap #wrap .big_menu .sub_menu li {
+  margin: 0;
+  width: 7vw;
+  height: 1vw;
+  padding: 1vw;
+  border-bottom: 1px solid #ddd;
+}
+
+.head .wrap #wrap .big_menu .sub_menu li:last-child {
+  border: none;
+}
+
+.head .wrap #wrap .big_menu .sub_menu li a {
+  color: #000;
+  font-size: 1vw;
+  padding-right: 1.5vw;
+  border: none;
+}
+
 /* subVisual */
 .subVisual {
   padding: 6.4vw;
@@ -650,4 +775,292 @@
 
 .last .btn ul li:nth-child(3) {
   right: 3vw;
+}
+
+/* footer */
+.btn_top {
+  position: fixed;
+  opacity: 0;
+  visibility: hidden;
+  bottom: 23rem;
+  right: 1.5rem;
+  z-index: 999;
+  transition: opacity 0.3s ease, visibility 0.3s ease;
+}
+
+.btn_top.show {
+  opacity: 1;
+  visibility: visible;
+}
+
+.btn_top img {
+  padding: 10px;
+  width: 2rem;
+  transform: rotate(-90deg);
+  opacity: 0.3;
+  border-radius: 100%;
+  border: 3px solid #ccc;
+}
+
+.foot {
+  background-color: #111;
+  padding-top: 1px;
+  font-family: var(--font-PyeongChang);
+}
+
+.foot span,
+.foot h2 {
+  color: #fff;
+  position: relative;
+  top: 70px;
+  padding-left: 7rem;
+}
+
+.foot span {
+  font-size: 2.1rem;
+}
+
+.foot h2 {
+  font-size: 4rem;
+  font-weight: 700;
+}
+
+.foot_cloud {
+  display: flex;
+  left: 50px;
+  flex-direction: column;
+}
+
+.foot_green {
+  padding-left: 90vw;
+}
+
+.foot_green li {
+  display: inline-block;
+  height: 50px;
+  /* 원하는 높이 조절 */
+  border-radius: 100px;
+  /* 원 모양의 구름을 만들기 위해 반지름 설정 */
+  position: relative;
+  margin: -13px;
+}
+
+.foot_green li::before,
+.foot_green li::after {
+  content: "";
+  width: 40px;
+  /* 구름의 일부분 너비 조절 */
+  height: 40px;
+  /* 구름의 일부분 높이 조절 */
+  background-color: #20ca6e;
+  /* 구름의 색상을 조절 */
+  position: absolute;
+  border-radius: 100px;
+}
+
+.foot_green li::before {
+  /* 위쪽 구름 부분 위치 조절 */
+  left: 50px;
+  /* 위쪽 구름 부분 위치 조절 */
+  top: -30px;
+}
+
+.foot_green li::after {
+  /* 위쪽 구름 부분 위치 조절 */
+  left: 70px;
+  /* 위쪽 구름 부분 위치 조절 */
+  top: -30px;
+}
+
+.green p {
+  position: relative;
+  bottom: 57px;
+  padding-left: 90.4vw;
+  color: #ffffff;
+  font-weight: 400;
+  font-size: 1rem;
+}
+
+.foot_info_address {
+  position: relative;
+  bottom: 40px;
+  margin: 1rem 0;
+  color: #fff;
+  opacity: 0.5;
+  display: block;
+  font-size: 15px;
+  margin-bottom: 60px;
+  padding-right: 4.3vw;
+  text-align: right;
+}
+
+.foot_info_address p {
+  padding-top: 10px;
+  padding-left: 10px;
+}
+
+.footer_copy {
+  padding-top: 20px;
+  font-size: 12px;
+  color: #fff;
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.footer_copy a {
+  font-size: 0.8rem;
+  position: relative;
+  top: 0.8vw;
+  left: 85vw;
+  font-weight: 600;
+}
+
+.footer_copy p {
+  font-size: 0.9rem;
+  margin-top: 0;
+  opacity: 0.5;
+  padding-left: 5.7vw;
+}
+
+/* footer */
+.btn_top {
+  position: fixed;
+  opacity: 0;
+  visibility: hidden;
+  bottom: 23rem;
+  right: 1.5rem;
+  z-index: 999;
+  transition: opacity 0.3s ease, visibility 0.3s ease;
+}
+
+.btn_top.show {
+  opacity: 1;
+  visibility: visible;
+}
+
+.btn_top img {
+  padding: 10px;
+  width: 2rem;
+  transform: rotate(-90deg);
+  opacity: 0.3;
+  border-radius: 100%;
+  border: 3px solid #ccc;
+}
+
+.foot {
+  background-color: #111;
+  padding-top: 1px;
+  font-family: var(--font-PyeongChang);
+}
+
+.foot span,
+.foot h2 {
+  color: #fff;
+  position: relative;
+  top: 70px;
+  padding-left: 7rem;
+}
+
+.foot span {
+  font-size: 2.1rem;
+}
+
+.foot h2 {
+  font-size: 4rem;
+  font-weight: 700;
+}
+
+.foot_cloud {
+  display: flex;
+  left: 50px;
+  flex-direction: column;
+}
+
+.foot_green {
+  padding-left: 90vw;
+}
+
+.foot_green li {
+  display: inline-block;
+  height: 50px;
+  /* 원하는 높이 조절 */
+  border-radius: 100px;
+  /* 원 모양의 구름을 만들기 위해 반지름 설정 */
+  position: relative;
+  margin: -13px;
+}
+
+.foot_green li::before,
+.foot_green li::after {
+  content: "";
+  width: 40px;
+  /* 구름의 일부분 너비 조절 */
+  height: 40px;
+  /* 구름의 일부분 높이 조절 */
+  background-color: #20ca6e;
+  /* 구름의 색상을 조절 */
+  position: absolute;
+  border-radius: 100px;
+}
+
+.foot_green li::before {
+  /* 위쪽 구름 부분 위치 조절 */
+  left: 50px;
+  /* 위쪽 구름 부분 위치 조절 */
+  top: -30px;
+}
+
+.foot_green li::after {
+  /* 위쪽 구름 부분 위치 조절 */
+  left: 70px;
+  /* 위쪽 구름 부분 위치 조절 */
+  top: -30px;
+}
+
+.green p {
+  position: relative;
+  bottom: 57px;
+  padding-left: 90.4vw;
+  color: #ffffff;
+  font-weight: 400;
+  font-size: 1rem;
+}
+
+.foot_info_address {
+  position: relative;
+  bottom: 40px;
+  margin: 1rem 0;
+  color: #fff;
+  opacity: 0.5;
+  display: block;
+  font-size: 15px;
+  margin-bottom: 60px;
+  padding-right: 4.3vw;
+  text-align: right;
+}
+
+.foot_info_address p {
+  padding-top: 10px;
+  padding-left: 10px;
+}
+
+.footer_copy {
+  padding-top: 20px;
+  font-size: 12px;
+  color: #fff;
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.footer_copy a {
+  font-size: 0.8rem;
+  position: relative;
+  top: 0.8vw;
+  left: 85vw;
+  font-weight: 600;
+}
+
+.footer_copy p {
+  font-size: 0.9rem;
+  margin-top: 0;
+  opacity: 0.5;
+  padding-left: 5.7vw;
 }
