--- a/index/pc.css
+++ b/index/pc.css
@@ -98,7 +98,7 @@ body {
   padding: 0.5vw;
   width: 50px;
   margin: 0;
-  color: #ffffff;
+  color: #000;
   border: 2px solid #ddd;
   border-radius: 30px 30px;
   font-family: var(--font-Pretendard);
@@ -130,7 +130,7 @@ body {
 
 .head .wrap #wrap .big_menu li a {
   text-decoration: none;
-  color: rgba(255, 255, 255, 0.4);
+  color: #000;
   font-weight: 600;
   font-size: 1vw;
   font-family: var(--font-Pretendard);
