--- a/index/pc.css
+++ b/index/pc.css
@@ -174,8 +174,9 @@ body {
 .head .wrap #wrap .big_menu .sub_menu li a {
   color: #000;
   font-size: 1vw;
-  padding-right: 1.5vw;
+  padding-right: 1.1vw;
   border: none;
+  padding-left: 20px;
 }
 
 /***** section *****/
