--- a/index/pc.css
+++ b/index/pc.css
@@ -150,7 +150,7 @@ body {
   opacity: 0; /* 모바일 버전에서 숨기도록 opacity 0 유지 */
   transition: opacity 0.3s ease;
   position: absolute;
-  left: 46vw;
+  left: 44vw;
   top: 60px;
   text-align: center;
   background-color: #fff;
@@ -174,9 +174,8 @@ body {
 .head .wrap #wrap .big_menu .sub_menu li a {
   color: #000;
   font-size: 1vw;
-  padding-right: 1.1vw;
+  padding-right: 0.1vw;
   border: none;
-  padding-left: 20px;
 }
 
 /***** section *****/
@@ -257,7 +256,7 @@ body {
   box-shadow: 0px 18px 27px 0px rgba(10, 39, 33, 0.43) inset;
   left: 0;
   top: 0;
-  content: "";
+  content: '';
   width: 100%;
   height: 200%;
   border-radius: 100%;
@@ -498,10 +497,10 @@ body {
   align-items: center;
   justify-content: center;
   white-space: nowrap;
-  animation: moveRight 50s linear infinite;
+  animation: moveLeft 50s linear infinite;
 }
 .tool_box:last-child .tool p {
-  animation: moveLeft 50s linear infinite;
+  animation: moveRight 50s linear infinite;
 }
 
 /* ---- section bukgu ---- */
@@ -1010,7 +1009,7 @@ body {
 
 .foot_green li::before,
 .foot_green li::after {
-  content: "";
+  content: '';
   width: 40px;
   /* 구름의 일부분 너비 조절 */
   height: 40px;
