--- a/sub1/main.css
+++ b/sub1/main.css
@@ -353,7 +353,7 @@ header {
 /* hero */
 .hero {
   background-color: #dceaf7;
-  height: 210vh;
+  height: auto;
   padding: 80px 0;
   text-align: center;
   display: flex;
@@ -586,7 +586,7 @@ header {
   position: absolute;
   left: 50%;
   top: 20%;
-  content: "";
+  content: '';
   width: 30px;
   height: 10px;
   margin-top: -10px;
@@ -595,7 +595,7 @@ header {
 }
 .event .event_all p span img {
   position: absolute;
-  left: -30%;
+  left: -35%;
   top: 10%;
   width: 100px;
   animation-name: wave;
@@ -610,8 +610,8 @@ header {
 }
 .event .event_all .event_cloud a .event_btn li {
   display: inline-block;
-  width: 100px; /* 원하는 너비 조절 */
-  height: 60px; /* 원하는 높이 조절 */
+  width: 80px; /* 원하는 너비 조절 */
+  height: 40px; /* 원하는 높이 조절 */
   border-radius: 100px; /* 원 모양의 구름을 만들기 위해 반지름 설정 */
   position: relative;
   bottom: -50px;
@@ -622,7 +622,7 @@ header {
 
 .event .event_all .event_cloud a .event_btn li::before,
 .event .event_all .event_cloud a .event_btn li::after {
-  content: "";
+  content: '';
   width: 40px; /* 구름의 일부분 너비 조절 */
   height: 40px; /* 구름의 일부분 높이 조절 */
   background-color: #20ca6e; /* 구름의 색상을 조절 */
@@ -682,7 +682,7 @@ header {
   position: absolute;
   left: 0;
   bottom: 0;
-  content: "";
+  content: '';
   width: 0;
   height: 0;
   border-top: 16px solid #ee3a36;
@@ -708,7 +708,7 @@ header {
 }
 
 .login_jam::before {
-  content: "";
+  content: '';
   position: absolute;
   top: 115%;
   right: 40%;
@@ -909,7 +909,7 @@ header {
 
 .foot_green li::before,
 .foot_green li::after {
-  content: "";
+  content: '';
   width: 25px;
   /* 구름의 일부분 너비 조절 */
   height: 25px;
@@ -1011,6 +1011,7 @@ header {
 .foot span,
 .foot h2 {
   color: #fff;
+  font-weight: 600;
 }
 
 .foot span {
@@ -1040,7 +1041,7 @@ header {
 
 .foot_green li::before,
 .foot_green li::after {
-  content: "";
+  content: '';
   width: 25px;
   /* 구름의 일부분 너비 조절 */
   height: 25px;
