--- a/sub2/sub2.css
+++ b/sub2/sub2.css
@@ -247,7 +247,7 @@ header {
   height: 3.7vw;
 }
 
-.subVisual>img {
+.subVisual > img {
   width: 111.818vw;
   position: absolute;
   bottom: 10vw;
@@ -325,8 +325,9 @@ header {
 
 /* map */
 .map::before {
-  content: "";
-  background: url(./images/content/explore/explore-deco-tree.png) no-repeat 100% / cover;
+  content: '';
+  background: url(./images/content/explore/explore-deco-tree.png) no-repeat 100% /
+    cover;
   width: 100%;
   height: 13.182vw;
   position: absolute;
@@ -379,7 +380,7 @@ header {
   margin: 3.182vw;
 }
 
-.map .course>span {
+.map .course > span {
   font-family: var(--font-Pretendard);
   color: #888888;
   background-color: #f7f7f7;
@@ -441,7 +442,7 @@ header {
 .map .course ul li:nth-of-type(2)::after,
 .map .course ul li:nth-of-type(4)::after,
 .map .course ul li:nth-of-type(6)::after {
-  content: " ";
+  content: ' ';
   border-top: var(--main-green) solid 3px;
   border-right: var(--main-green) solid 3px;
   width: 1.7vw;
@@ -589,7 +590,7 @@ header {
 }
 
 .plan .wrapper .al ul li p::before {
-  content: "-";
+  content: '-';
   margin-right: 1vw;
 }
 
@@ -645,7 +646,7 @@ header {
 }
 
 .plan .calender table td.ing::before {
-  content: "";
+  content: '';
   background-color: var(--main-green2);
   height: 6.667vw;
   width: 100%;
@@ -749,7 +750,7 @@ td {
 }
 
 .process::before {
-  content: "";
+  content: '';
   position: absolute;
   width: 0;
   height: 255vw;
@@ -892,7 +893,7 @@ td {
 }
 
 .event .swiper-slide::after {
-  content: "";
+  content: '';
   width: 0;
   height: 0;
   position: absolute;
@@ -905,8 +906,9 @@ td {
 }
 
 .event .swiper-slide em::before {
-  content: "";
-  background: url(./images/content/explore/ic-relay-talk.svg) no-repeat 100% / contain;
+  content: '';
+  background: url(./images/content/explore/ic-relay-talk.svg) no-repeat 100% /
+    contain;
   width: 7vw;
   height: 7vw;
   position: absolute;
@@ -942,7 +944,7 @@ td {
   width: 45px;
   font-family: var(--font-Pretendard);
   margin: 0 3vw;
-  padding: 0.911vw 1.560vw 0.650vw;
+  padding: 0.911vw 1.56vw 0.65vw;
   text-align: center;
 }
 
@@ -967,7 +969,7 @@ td {
   background-color: #d6f2e3;
 }
 
-.event>span {
+.event > span {
   background-color: var(--color-violet);
   font-size: 3.467vw;
   padding: 2.133vw 4vw;
@@ -978,8 +980,8 @@ td {
   animation: move 1.5s infinite ease-in-out;
 }
 
-.event>span::after {
-  content: "";
+.event > span::after {
+  content: '';
   width: 3vw;
   height: 3vw;
   background-color: var(--color-violet);
@@ -1066,10 +1068,10 @@ td {
 
 /* last */
 .last {
-  background: url(./images/content/explore/explore-bottom.jpg) no-repeat 100% / cover;
+  background: url(./images/content/explore/explore-bottom.jpg) no-repeat 100% /
+    cover;
   padding: 16vw 0;
-  text-align: center;position: relative;
-  z-index: 5;
+  text-align: center;
 }
 
 .last p {
@@ -1150,7 +1152,7 @@ td {
 }
 
 /***** footer *****/
-.foot .btn_top {
+.btn_top {
   position: fixed;
   opacity: 0;
   visibility: hidden;
@@ -1160,13 +1162,12 @@ td {
   transition: opacity 0.3s ease, visibility 0.3s ease;
 }
 
-.foot .btn_top.show {
+.btn_top.show {
   opacity: 1;
   visibility: visible;
-  z-index: 999;
 }
 
-.foot .btn_top img {
+.btn_top img {
   padding: 10px;
   width: 2rem;
   transform: rotate(-90deg);
@@ -1183,6 +1184,7 @@ td {
 .foot span,
 .foot h2 {
   color: #fff;
+  font-weight: 600;
 }
 
 .foot span {
@@ -1212,7 +1214,7 @@ td {
 
 .foot_green li::before,
 .foot_green li::after {
-  content: "";
+  content: '';
   width: 25px;
   /* 구름의 일부분 너비 조절 */
   height: 25px;
