--- a/sub3/sub3_1.css
+++ b/sub3/sub3_1.css
@@ -242,7 +242,7 @@ header {
   box-shadow: 0px 18px 27px 0px rgba(10, 39, 33, 0.43) inset;
   left: 0;
   top: 0;
-  content: "";
+  content: '';
   width: 100%;
   height: 200%;
   border-radius: 100%;
@@ -403,7 +403,7 @@ header {
 
 .content .story .review .cloud .after .cloud_btnF li::before,
 .content .story .review .cloud .after .cloud_btnF li::after {
-  content: "";
+  content: '';
   width: 40px;
   height: 40px;
   background-color: #20ca6e;
@@ -416,7 +416,7 @@ header {
 }
 
 .content .story .review .cloud .after .cloud_btnF li::after {
-  left: 15px;
+  left: 10px;
 }
 
 .content .story .review .cloud .after p {
@@ -476,6 +476,7 @@ header {
 .foot span,
 .foot h2 {
   color: #fff;
+  font-weight: 600;
 }
 
 .foot span {
@@ -505,7 +506,7 @@ header {
 
 .foot_green li::before,
 .foot_green li::after {
-  content: "";
+  content: '';
   width: 25px;
   /* 구름의 일부분 너비 조절 */
   height: 25px;
