--- a/sub3/sub3_3pc.css
+++ b/sub3/sub3_3pc.css
@@ -200,7 +200,7 @@ body {
   box-shadow: 0px 18px 27px 0px rgba(10, 39, 33, 0.43) inset;
   left: 0;
   top: 0;
-  content: "";
+  content: '';
   width: 100%;
   height: 200%;
   border-radius: 100%;
@@ -584,7 +584,7 @@ body {
 
 .content .story3 .review .cloud .before .cloud_btnB li::before,
 .content .story3 .review .cloud .before .cloud_btnB li::after {
-  content: "";
+  content: '';
   width: 3rem; /* 구름의 일부분 너비 조절 */
   height: 3rem; /* 구름의 일부분 높이 조절 */
   background-color: #cfcfcf; /* 구름의 색상을 조절 */
@@ -640,7 +640,7 @@ body {
 
 .content .story3 .review .cloud .after .cloud_btnF li::before,
 .content .story3 .review .cloud .after .cloud_btnF li::after {
-  content: "";
+  content: '';
   width: 3rem; /* 구름의 일부분 너비 조절 */
   height: 3rem; /* 구름의 일부분 높이 조절 */
   background-color: #20ca6e; /* 구름의 색상을 조절 */
@@ -755,7 +755,7 @@ body {
 
 .foot_green li::before,
 .foot_green li::after {
-  content: "";
+  content: '';
   width: 40px;
   /* 구름의 일부분 너비 조절 */
   height: 40px;
