--- a/index/index.css
+++ b/index/index.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
-@import url(../assets/common.css);
+@import url(../assets/css/common.css);
 /* common */
 
 .flex {
@@ -867,6 +867,7 @@ header {
 .foot span,
 .foot h2 {
   color: #fff;
+  font-weight: 600;
 }
 
 .foot span {
@@ -896,7 +897,7 @@ header {
 
 .foot_green li::before,
 .foot_green li::after {
-  content: "";
+  content: '';
   width: 25px;
   /* 구름의 일부분 너비 조절 */
   height: 25px;
