--- a/index/pc.css
+++ b/index/pc.css
@@ -98,7 +98,7 @@ body {
   padding: 0.5vw;
   width: 50px;
   margin: 0;
-  color: #ffffff;
+  color: #000;
   border: 2px solid #ddd;
   border-radius: 30px 30px;
   font-family: var(--font-Pretendard);
@@ -130,7 +130,7 @@ body {
 
 .head .wrap #wrap .big_menu li a {
   text-decoration: none;
-  color: rgba(255, 255, 255, 0.4);
+  color: #000;
   font-weight: 600;
   font-size: 1vw;
   font-family: var(--font-Pretendard);
@@ -150,7 +150,7 @@ body {
   opacity: 0; /* 모바일 버전에서 숨기도록 opacity 0 유지 */
   transition: opacity 0.3s ease;
   position: absolute;
-  left: 46vw;
+  left: 44vw;
   top: 60px;
   text-align: center;
   background-color: #fff;
@@ -174,7 +174,7 @@ body {
 .head .wrap #wrap .big_menu .sub_menu li a {
   color: #000;
   font-size: 1vw;
-  padding-right: 1.5vw;
+  padding-right: 0.1vw;
   border: none;
 }
 
@@ -256,7 +256,7 @@ body {
   box-shadow: 0px 18px 27px 0px rgba(10, 39, 33, 0.43) inset;
   left: 0;
   top: 0;
-  content: "";
+  content: '';
   width: 100%;
   height: 200%;
   border-radius: 100%;
@@ -1009,7 +1009,7 @@ body {
 
 .foot_green li::before,
 .foot_green li::after {
-  content: "";
+  content: '';
   width: 40px;
   /* 구름의 일부분 너비 조절 */
   height: 40px;
@@ -1066,6 +1066,7 @@ body {
   font-size: 12px;
   color: #fff;
   border-top: 1px solid rgba(255, 255, 255, 0.1);
+  margin-bottom: 10px;
 }
 
 .footer_copy a {
